# coin-problem

./: .coveragerc  LICENSE.txt  README.md  SPEC.md  __main__.py  coin_solver.py  my-player.py  player.py  pyproject.toml  referee.py  requirements.txt  test_cases.json  tests.py  timer.py
coinproblem/: __main__.py  my-player.py  player.py  referee.py  solver.py  timer.py
tests/: conftest.py  test_referee.py  test_solver.py
