[project]
name = "coin-problem"
version = "1.0.0"
description = "A generalized solver for coin-count and coin-amount math problems."
readme = "README.md"
requires-python = ">=3.9"
authors = [
    {name = "Caleb Evans", email = "caleb@calebevans.me"}
]
maintainers = [
    {name = "Caleb Evans", email = "caleb@calebevans.me"}
]
license = "MIT"
dependencies = []

[dependency-groups]
dev = [
    "coverage==6.5.0",
    "nose2==0.15.1",
    "pexpect==4.7.0",
    "ruff>=0.12.0",
    "tomli>=2.2.1",
    "typing-extensions==4.9.0",
]

[tool.ruff]
include = ["**/*.py"]

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    "W",
    # pyflakes
    "F",
    # isort
    "I",
    # perflint
    "PERF",
]

# Coverage configuration migrated from .coveragerc
[tool.coverage.run]
branch = true
include = ["coinproblem/*.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "pass",
]
